# ZIP-Take-Home

./: .flake8  .gitignore  PROCESS.md  conftest.py  requirements-dev.txt  requirements.txt  setup.cfg
.github/actions/notify/: action.yml  notify.py
.github/workflows/: ci.yml  meta-tests.yml
src/: calculator.py
tests/: test_calculator.py
tests/ci/: test_ci_pipeline.py
