[metadata]
name = zip-ci-assignment
version = 0.1.0
description = ZIP take-home CI/CD assignment

[options]
packages = find:
package_dir = =.
python_requires = >=3.11

[tool:pytest]
testpaths = tests
addopts = -p no:cacheprovider

[coverage:run]
source = src

[coverage:report]
show_missing = true
fail_under = 80
